# LiteX-CNC

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  README.md  commands.txt  csr.csv  halcompile.py  openocd.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-publish.yml
docs/: Makefile  requirements.txt
docs/src/: changelog.rst  conf.py  index.rst  license.rst  pc.rst  raspberrypi.rst  readme.rst
docs/src/connecrions/: index.rst
docs/src/connections/: ethernet.rst  index.rst  pigpio.rst  spidev.rst
docs/src/examples/: index.rst
docs/src/examples/indexed/: 5a-75b_v6.1_i12o14p6s6e6.json  5a-75b_v6.1_i24o32.json  5a-75b_v7.0_i12o14p6s6e6.json  5a-75b_v7.0_i24o32.json  5a-75b_v8.0_i12o14p6s6e6.json  5a-75b_v8.0_i24o32.json
docs/src/examples/json/: 5a-75b_v6.1_i12o14p6s6e6.json  5a-75b_v6.1_i24o32.json  5a-75b_v7.0_i12o14p6s6e6.json  5a-75b_v7.0_i24o32.json  5a-75b_v8.0_i12o14p6s6e6.json  5a-75b_v8.0_i24o32.json  5a-75e_v6.0_i24o26p6s6e6.todo  5a-75e_v6.0_i48o56.json  5a-75e_v7.1_i48o56.json  build_examples.sh
docs/src/examples/named/: 5a-75b_v6.1_i12o14p6s6e6.json  5a-75b_v6.1_i24o32.json  5a-75b_v7.0_i12o14p6s6e6.json  5a-75b_v7.0_i24o32.json  5a-75b_v8.0_i12o14p6s6e6.json  5a-75b_v8.0_i24o32.json  5a-75e_v6.0_i24o26p6s6e6.json  5a-75e_v6.0_i48o56.json
docs/src/modules/: encoder.rst  gpio.rst  gpio_in.rst  gpio_out.rst  index.rst  pwm.rst  stepgen.rst  watchdog.rst
driver/: crc.h  encoder.c  encoder.h  etherbone.c  etherbone.h  gpio.c  gpio.h  litexcnc.c  litexcnc.h  litexcnc_debug.c  litexcnc_eth.c  litexcnc_eth.h  pwm.c  pwm.h  stepgen.c  stepgen.h  wallclock.c  wallclock.h  watchdog.c  watchdog.h
examples/: 5a-75a.json  5a-75b_simple.json  5a-75e-all_modules.json  5a-75e-hello-gpio.json  5a-75e-stepgen-test.json  5a-75e.json  5a-75e81.json  5a-75e_simple.json  README.md  rv901t_emco5.json
firmware/: __init__.py  __main__.py  encoder.py  etherbone.py  gpio.py  mmio.py  pwm.py  soc.py  stepgen.py  watchdog.py
firmware/boards/: colorlight.py  rv901t.py
firmware/stepgen/: stepgen.ice
rv901t_emco5/ISE_Project/: rv901t.par
src/litexcnc/: __main__.py  stepgen.old
src/litexcnc/cli/: __init__.py  build_firmware.py  convert_bit_to_flash.py  flash_firmware.py  install_driver.py  install_litex.py  install_toolchain.py
src/litexcnc/cli/config/: hub75hat-rpi5.cfg  hub75hat.cfg
src/litexcnc/config/: __init__.py
src/litexcnc/config/boards/: __init__.py  colorlight.py  rv901t.py  sipeed.py
src/litexcnc/config/boards/etherbone/: __init__.py  colorlight.py  rv901t.py
src/litexcnc/config/connections/: __init__.py  etherbone.py  spi.py
src/litexcnc/config/modules/: __init__.py  encoder.py  gpio.py  pwm.py  shift_out.py  stepgen.py  watchdog.py
src/litexcnc/driver/: __init__.py  crc.c  encoder.c  encoder.h  etherbone.c  etherbone.h  gpio.c  gpio.h  halcompile.py  litexcnc.c  litexcnc.h  litexcnc_debug.h  litexcnc_eth.c  litexcnc_eth.h  pwm.c  pwm.h  stepgen copy.c  stepgen copy2.h  stepgen.c  stepgen.h  wallclock.c  wallclock.h  watchdog.c  watchdog.h
src/litexcnc/driver/boards/: README.rst  etherbone.c  litexcnc_eth.c  litexcnc_eth.h  litexcnc_pigpio.c  litexcnc_pigpio.h  litexcnc_pigpio_speed_test.c  litexcnc_spi.c  litexcnc_spi.h  litexcnc_spidev.c  litexcnc_spidev.h
src/litexcnc/driver/boards/janked/: README.rst  litexcnc_debug.c
src/litexcnc/driver/modules/: README.rst  litexcnc_encoder.c  litexcnc_encoder.h  litexcnc_gpio.c  litexcnc_gpio.h  litexcnc_pwm.c  litexcnc_pwm.h  litexcnc_shift_out.c  litexcnc_shift_out.h  litexcnc_stepgen.c  litexcnc_stepgen.h
src/litexcnc/driver/stepgen/: pos2vel.c  pos2vel.h
src/litexcnc/firmware/: __init__.py  encoder.py  etherbone.py  gpio.py  mmio.py  pwm.py  soc.py  stepgen.py  watchdog.py
src/litexcnc/firmware/boards/: __init__.py  colorlight.py  rv901t.py  sipeed.py
src/litexcnc/firmware/boards/colorlight/: __init__.py  etherbone.py  platform_5a_75x.py  platform_ix.py
src/litexcnc/firmware/boards/etherbone/: __init__.py  colorlight.py  rv901t.py
src/litexcnc/firmware/boards/linsn/: __init__.py  etherbone.py  platform_rv901t.py
src/litexcnc/firmware/boards/sipeed/: __init__.py  platform_tangnano20k.py
src/litexcnc/firmware/connections/: __init__.py  etherbone.py  spi.py
src/litexcnc/firmware/modules/: __init__.py  encoder.py  gpio.py  pwm.py  shift_out.py  stepgen.py
src/litexcnc/gui/: __init__.py
src/litexcnc/tools/: __init__.py  bit_to_flash.py
tests/driver/: load_components_show_pins.hal  load_pigpio_spi.hal  test_gpio_blink.hal  test_gpio_input.hal  test_pwm_knight_rider.hal  test_stepgen.hal
tests/firmware/5a-75e-hello-gpio/: csr.csv
tests/firmware/5a-75e-hello-gpio/gateware/: build_colorlight_5a_75e.sh  colorlight_5a_75e.bit  colorlight_5a_75e.config  colorlight_5a_75e.lpf  colorlight_5a_75e.rpt  colorlight_5a_75e.svf  colorlight_5a_75e.v  colorlight_5a_75e.ys  colorlight_5a_75e_hello_world.svf  mem.init
tests/firmware/5a-75e-stepgen-test/: csr.csv
tests/firmware/5a-75e-stepgen-test/gateware/: colorlight_5a_75e.bit  colorlight_5a_75e.lpf  colorlight_5a_75e.rpt  colorlight_5a_75e.svf  colorlight_5a_75e.v  colorlight_5a_75e.ys  mem.init
