[tool.poetry]
name = "litexcnc"
version = "0.9.0a1"
description = "Generic CNC firmware and driver for FPGA cards which are supported by LiteX"
authors = ["Peter van Tol <petertgvantol@gmail.com>"]
license = "GNU GPL"
readme = "README.md"
packages = [{include = "litexcnc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^21.3"
pydantic = "^1.10.2"
requests = {version="^2.28.1", optional = true}
click = {version="^8.1.3", optional = true}
meson = {version="^0.64.1", optional = true}
ninja = {version="^1.11.1", optional = true}
yapps = {version="^2.2.0", optional = true}

[tool.poetry.extras]
cli = ["click", "meson", "ninja", "requests", "yapps"]

[tool.poetry.scripts]
litexcnc = { callable = "litexcnc.__main__:cli", extras = ["cli"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
