[project]
name = "litexcnc"
version = "1.3.3"
description = "Generic CNC firmware and driver for FPGA cards which are supported by LiteX"
authors = [
    { name = "Peter van Tol", email = "petertgvantol@gmail.com" },
]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "litexcnc", from = "src"}]
homepage = "https://github.com/Peter-van-Tol/LiteX-CNC"
repository = "https://github.com/Peter-van-Tol/LiteX-CNC"
documentation = "https://litex-cnc.readthedocs.io/en/latest/"
keywords = [
    "FPGA",
    "CNC",
    "CNC-controller",
    "CNC-machine",
    "linuxcnc",
    "linuxcnc-FPGA",
    "litex"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Other Environment",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Other",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Hardware :: Hardware Drivers"
]
requires-python = ">=3.7,<3.13"
dependencies = [
    "packaging>=21.3",
    "pydantic>=1.10.2,<2.0",
    "requests>=2.28.1,<3.0",
    "click~=8.1.3",
    "meson~=0.64.1",
    "ninja~=1.11.1",
    "yapps~=2.2.0",
    "chardet~=5.0.0",
]

[tool.poetry.extras]
cli = []

[project.scripts]
litexcnc = "litexcnc.__main__:cli"

[project.entry-points."litexcnc.driver_files"]
default = "litexcnc.driver"

[project.entry-points."litexcnc.modules"]
gpio    = "litexcnc.config.modules.gpio"
pwm     = "litexcnc.config.modules.pwm"
stepgen = "litexcnc.config.modules.stepgen"
encoder = "litexcnc.config.modules.encoder"

[project.entry-points."litexcnc.boards"]
colorlight = "litexcnc.config.boards.colorlight"
rv901t     = "litexcnc.config.boards.rv901t"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
